# padel-court-whisperer

./: .gitignore  Dockerfile  LICENSE  README.md  padel-court-whisperer.service  pyproject.toml
src/padel_court_whisperer/: __init__.py  __main__.py  api_client.py  config.py  discord_notifier.py  version.py
